--- a/sample-app/src/main/webapp/partials/home.html
+++ b/sample-app/src/main/webapp/partials/home.html
@@ -62,6 +62,24 @@
           </div>
         </md-tab-body>
       </md-tab>
+        <md-tab id="tab5">
+            <md-tab-label>Strategy </md-tab-label>
+            <md-tab-body>
+                <div ng-controller="dataCtrl">
+                    <div kendo-grid
+                         k-data-source="gridData"
+                         k-columns="gridColumns"
+                         k-selectable="true"
+                         k-on-change="selected = data"
+                         k-sortable="true"
+                         k-pageable="true"
+                         k-column-menu="true"
+                         k-filterable="true"
+                         k-groupable="true">
+                    </div>
+                </div>
+            </md-tab-body>
+        </md-tab>
     </md-tabs>
   </md-content>
 </div>
