--- a/sample-app/src/main/webapp/stylesheets/styles.css
+++ b/sample-app/src/main/webapp/stylesheets/styles.css
@@ -55,11 +55,11 @@ ul {
 
 .navbar-default .navbar-brand {
   color: #333;
-  background-color: #ffe939;
+  background-color: #ffffff;
 }
 
 .navbar-default .navbar-brand:hover {
-  color: #ffe939;
+  color: #ffffff;
   background-color: #333;
 }
 
