Add price chart

--- a/sample-app/src/main/webapp/partials/home.html
+++ b/sample-app/src/main/webapp/partials/home.html
@@ -46,10 +46,11 @@
         </md-tab-body>
       </md-tab>
       <md-tab id="tab4">
-        <md-tab-label>Time Chart</md-tab-label>
+        <md-tab-label>Data Science</md-tab-label>
         <md-tab-body>
           <div ng-controller="TimeChartCtrl">
-              <hc-chart id="timeChart" options="chartOptions">Placeholder for generic chart</hc-chart>
+              <hc-chart options="chartPCOptions"></hc-chart>
+              <hc-chart options="chartPriceOptions"></hc-chart>
           </div>
         </md-tab-body>
       </md-tab>
